# src/bank-service/internal/handler/entityHandlers/walletHandler.go
@@ -5,11 +5,14 @@ import (
 	"bankService/internal/commands/commandResponse"
 	"bankService/internal/services"
 	"net/http"
+	"sync"
 
 	"github.com/gin-gonic/gin"
+	"github.com/sirupsen/logrus"
 )
 
 type WalletHandler struct {
+	mu sync.Mutex
 }
 
 func NewWalletHandler() *WalletHandler {
@@ -24,18 +27,29 @@ func NewWalletHandler() *WalletHandler {
 // @Success 201 {object} nil
 // @Failure 400 {object} commandResponse.ErrorReponse "Bad Request"
 // @Router /wallet [post]
-func (*WalletHandler) Create(c *gin.Context) {
+func (h *WalletHandler) Create(c *gin.Context) {
+	logg := c.Keys["logg"].(*logrus.Entry)
+	logg.Debug("Start Create")
 	var req commandRequest.WalletCreateRequest
 	err := c.ShouldBindJSON(&req)
 	if err != nil {
+		logg.Error(err)
 		c.JSON(http.StatusBadRequest, &commandResponse.ErrorReponse{
 			Error: err.Error(),
 		})
 		return
 	}
 
+	h.mu.Lock()
+	logg.Debug("loks")
+	defer func() {
+		h.mu.Unlock()
+		logg.Debug("unloks")
+	}()
+
 	err = services.NewWalletService(c, true).Create(req)
 	if err != nil {
+		logg.Error(err)
 		c.JSON(http.StatusBadRequest, &commandResponse.ErrorReponse{
 			Error: err.Error(),
 		})
@@ -43,6 +57,7 @@ func (*WalletHandler) Create(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusCreated, nil)
+	logg.Debug("Created")
 }
 
 // @Summary get
@@ -54,9 +69,34 @@ func (*WalletHandler) Create(c *gin.Context) {
 // @Failure 400 {object} commandResponse.ErrorReponse "Bad Request"
 // @Router /wallets/{id} [get]
 func (*WalletHandler) Get(c *gin.Context) {
+	logg := c.Keys["logg"].(*logrus.Entry)
+	logg.Debug("Start Get")
 	id := c.Param("id")
 	res, err := services.NewWalletService(c, true).Get(&id)
 	if err != nil {
+		logg.Error(err)
+		c.JSON(http.StatusBadRequest, &commandResponse.ErrorReponse{
+			Error: err.Error(),
+		})
+		return
+	}
+
+	c.JSON(http.StatusOK, res)
+}
+
+// @Summary get all
+// @Tags Wallet
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} commandResponse.WalletAllResponse
+// @Failure 400 {object} commandResponse.ErrorReponse "Bad Request"
+// @Router /wallets [get]
+func (*WalletHandler) GetAll(c *gin.Context) {
+	logg := c.Keys["logg"].(*logrus.Entry)
+	logg.Debug("Start GetAll")
+	res, err := services.NewWalletService(c, true).GetAll()
+	if err != nil {
+		logg.Error(err)
 		c.JSON(http.StatusBadRequest, &commandResponse.ErrorReponse{
 			Error: err.Error(),
 		})
